deployment/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reminders-backend
  namespace: default
  labels:
    app: reminders-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reminders-backend
  template:
    metadata:
      labels:
        app: reminders-backend
    spec:
      containers:
        - name: backend
          image: andrejt12/reminders-plus-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reminders-backend
  namespace: default
spec:
  selector:
    app: reminders-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
