deployment/postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: reminders-db
  namespace: default
  labels:
    app: reminders-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reminders-db
  serviceName: "reminders-db-service"
  template:
    metadata:
      labels:
        app: reminders-db
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: reminders-db-service
  namespace: default
spec:
  selector:
    app: reminders-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
