deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reminders-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: reminders-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reminders-frontend-service
                port:
                  number: 80
